<fix> review: add pre-wrap

--- a/files/css/jlat.css
+++ b/files/css/jlat.css
@@ -136,7 +136,7 @@ a.no-decorate {
 }
 
 .withpre {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 @media print
